U: correct z-index

--- a/src/styles.module.css
+++ b/src/styles.module.css
@@ -66,7 +66,7 @@
 
 .rfeFormItemDivSelected {
   background-color: #69c0ff;
-  z-index: 1002;
+  z-index: 1;
 }
 
 .rfeFormItemDiv::after, .rfeFormItemDivSelected::after {
@@ -77,16 +77,15 @@
   bottom: 0;
   top: 0;
   display: block;
-  z-index: 1001;
 }
 
 .rfeFormItemDelDiv {
+  z-index: 2;
   position: absolute;
   bottom: -18px;
   right: 50px;
   width: 36px;
   height: 36px;
-  z-index: 1009;
   background-color: #FFF;
   border: 1px solid #ff7875;
   border-radius: 18px;
@@ -101,6 +100,10 @@
   color: #fff;
 }
 
+.rfeGridLayout :global(.ant-form-item-label) {
+  width: 100px;
+}
+
 /* ------------------------------------------- right panel - config panel ------------------------------------------- */
 .rfePropertiesDiv {
   width: 300px;
@@ -108,7 +111,7 @@
 }
 
 .rfeConfigTabDiv {
-  
+  border-bottom: 2px solid #e4e7ed
 }
 
 .rfeConfigTab, .rfeConfigTabCurrent {
@@ -118,6 +121,7 @@
   font-weight: 500;
   color: #333;
   cursor: pointer;
+  margin-bottom: -2px;
 }
 
 .rfeConfigTabCurrent {
@@ -128,3 +132,4 @@
 :global(.react-resizable-handle) {
   z-index: 1009;
 }
+
